@@ -68,3 +68,5 @@ InliningTest.lengthIarr2(int[])int: 3 bytes
 InliningTest.lengthIarr3(int[])int: 3 bytes
 InliningTest.getIarr1(int[],int)int: 4 bytes
 InliningTest.setIarr1(int[],int,int)void: 5 bytes
+cycle1.isIsEven(int)boolean: 22 bytes
+cycle2.isIsOdd(int)boolean: 22 bytes
